--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,16 @@ body {
 	font-size: 12px;
 	line-height: 1.6rem;
 	color: #333333;
-	background: #F3F3F9;
+	background: #FFF;
+	padding-top: 100px;
+	font-family: -apple-system, BlinkMacSystemFont, Roboto, sans-serif;
+}
+a {
+	text-decoration: none;
+	color: #333;
+}
+a:hover {
+	color: rgb(21, 185, 255);
 }
 ul#hr {
 	margin: 0;
@@ -14,21 +23,137 @@ ul#hr {
 .comic {
 	display: inline-block;
 	vertical-align: top;
-	width: 19%;
+	width: 18%;
+	margin: 20px 3.3%;
 }
-.comic-content {
-	display: none;
+@media screen and (max-width: 880px) {
+	.comic {
+		width: 26%;
+	}
 }
-.comic .comic-content {
-	display: block;
+@media screen and (max-width: 600px) {
+	.comic {
+		width: 43%;
+	}
 }
 
+.comic img {
+	border-radius: 6px;
+}
+.comic h3 {
+	margin: 0;
+}
+.comic p {
+	margin: 0;
+}
+.comic p.issue {
+	display: inline-block;
+	vertical-align: top;
+	width: 48%;
+	margin-right: 1%;
+}
+.comic p.price {
+	display: inline-block;
+	vertical-align: top;
+	width: 49%;
+	text-align: right;
+}
+
+
+
+header {
+	background-color: rgb(21, 185, 255);
+  backdrop-filter: blur(10px);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
+h1 {
+	font-size: 34px;
+  line-height: 41px;
+}
+h2 {
+	font-size: 24px;
+}
+h3 {
+	font-size: 17px;
+}
+
+label,
+.label {
+	font-size: 13px;
+  line-height: 18px;
+  color: rgba(0, 0, 0, 0.6);
+  display: block;
+}
+
+hr {
+	background-color: rgba(0, 0, 0, 0.9);
+  opacity: 0.15;
+  height: 1px;
+  border: 0;
+}
+
+
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
 
 
 
 
 .overlay {
-  position: fixed;
+  position: absolute;
+  height: 100%;
   top: 0;
   bottom: 0;
   left: 0;
@@ -45,18 +170,38 @@ ul#hr {
 
 .popup {
   margin: 70px auto;
-  padding: 20px;
+  padding: 60px 20px 20px;
+  font-size: 17px;
   background: #fff;
   border-radius: 5px;
   width: 30%;
   position: relative;
   transition: all 5s ease-in-out;
 }
+@media screen and (max-width: 880px) {
+	.popup {
+		width: 60%;
+	}
+}
+@media screen and (max-width: 600px) {
+
+}
+
+.popup h2 {
+	margin: 0;
+}
+.popup .publisher {
+	font-size: 18px;
+  font-weight: 500;
+  color: rgba(0, 0, 0, 0.6);
+  margin-top: -10px;
+  margin-bottom: 16px;
+}
 
 .popup .close {
   position: absolute;
-  top: 20px;
-  right: 30px;
+  top: 16px;
+  right: 20px;
   transition: all 200ms;
   font-size: 30px;
   font-weight: bold;
