--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
 	line-height: 1.6rem;
 	color: #333333;
 	background: #FFF;
-	padding-top: 100px;
+	padding-top: 80px;
 	font-family: -apple-system, BlinkMacSystemFont, Roboto, sans-serif;
 }
 a {
@@ -99,17 +99,29 @@ hr {
 
 .topnav {
   overflow: hidden;
-  background-color: #333;
+  text-align: right;
 }
 
 .topnav a {
-  float: left;
-  display: block;
+  display: inline-block;
+  vertical-align: top;
   color: #f2f2f2;
   text-align: center;
-  padding: 14px 16px;
+  padding: 25px 16px;
   text-decoration: none;
   font-size: 17px;
+}
+.logo-container {
+	display: inline-block;
+  vertical-align: top;
+  float: left;
+  
+}
+.topnav a.logo {
+	padding: 9px 16px 5px;
+}
+.topnav a.logo:hover {
+	background: none;
 }
 
 .topnav a:hover {
@@ -126,15 +138,27 @@ hr {
   display: none;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 615px) {
+  body {
+	  padding-top: 60px;
+  }
   .topnav a:not(:first-child) {display: none;}
   .topnav a.icon {
     float: right;
     display: block;
   }
+  .logo-container {
+	  text-align: left;
+  }
+  .topnav a.logo img {
+	  max-width: 180px;
+  }
+  .topnav a {
+	  padding: 14px 16px;
+  }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 615px) {
   .topnav.responsive {position: relative;}
   .topnav.responsive .icon {
     position: absolute;
@@ -145,6 +169,7 @@ hr {
     float: none;
     display: block;
     text-align: left;
+    clear: both;
   }
 }
 
