--- a/css/style.css
+++ b/css/style.css
@@ -315,7 +315,20 @@ section.social-post li.social-comic {
 	margin: 0;
 }
 
+.filterDiv {
+  float: left;
+  background-color: #2196F3;
+  color: #ffffff;
+  width: 100px;
+  line-height: 100px;
+  text-align: center;
+  margin: 2px;
+  display: none;
+}
 
+.show {
+  display: block;
+}
 
 
 
