--- a/css/style.css
+++ b/css/style.css
@@ -254,7 +254,9 @@ hr {
 
 
 
-
+.social-post-page {
+	width: 640px;
+}
 section.social-post {
 	background-image: linear-gradient(0deg,#394D57 0%,#111520 100%);
   color: #fff;
