--- a/css/style.css
+++ b/css/style.css
@@ -255,7 +255,8 @@ hr {
 
 
 .social-post-page {
-	min-width: 800px;
+	width: 800px;
+	margin: 0 40px;
 }
 section.social-post {
 	background-image: linear-gradient(0deg,#394D57 0%,#111520 100%);
