--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,7 @@ h1 {
 }
 h2 {
 	font-size: 24px;
+	line-height: 28px;
 }
 h3 {
 	font-size: 17px;
@@ -219,7 +220,8 @@ hr {
 }
 
 .popup h2 {
-	margin: 0;
+	margin-top: 0;
+  margin-bottom: 10px;
 }
 .popup .publisher {
 	font-size: 18px;
