--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,11 @@ ul#hr {
 .clear {
 	clear: both;
 }
+.container {
+	max-width: 1160px;
+	padding: 0 20px;
+	margin: 0 auto;
+}
 .comic {
 	display: inline-block;
 	vertical-align: top;
