--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-	font-size: 12px;
+	font-size: 16px;
 	line-height: 1.6rem;
 	color: #333333;
 	background: #FFF;
@@ -14,7 +14,9 @@ a:hover {
 	color: rgb(21, 185, 255);
 }
 a.button {
-	
+	background: rgb(21, 185, 255);
+	color: #FFF;
+	font-weight: bold;
 }
 ul#hr {
 	margin: 0;
