--- a/css/style.css
+++ b/css/style.css
@@ -376,5 +376,10 @@ input {
 .page-contact textarea {
 	display: block;
 	width: 50%;
+	border-radius: 4px;
+	border: 1px solid #CCC;
+}
+.page-contact textarea {
+	width: 52%;
 }
 
