--- a/css/style.css
+++ b/css/style.css
@@ -376,7 +376,7 @@ section.social-post li.social-comic {
 
 input {
 	font-size: 16px;
-  padding: 8px;
+  padding: 8px 2%;
 }
 .page-contact input,
 .page-contact textarea {
